samples/_failures_safe/1761145978_93cfbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a212efc.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_5a212efc.c:161:9: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  161 |         print
      |         ^~~~~
      |         printf
./samples/SAFE/__tmp_5a212efc.c:161:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5a212efc.c:161:14: error: expected ‘;’ at end of input
  161 |         print
      |              ^
      |              ;
./samples/SAFE/__tmp_5a212efc.c:161:9: error: expected declaration or statement at end of input
  161 |         print
      |         ^~~~~
./samples/SAFE/__tmp_5a212efc.c:161:9: error: expected declaration or statement at end of input
